# entrance

./: .gitignore  README.md  elm-package.json  elm.json  setup.py
docs/: design-notes.docx
docs/diagrams/: design-diagrams.pptx  sequence-diagrams.txt
elm/EnTrance/: Endpoint.elm  Feature.elm  Internal.elm  Notification.elm  Persist.elm  Ping.elm
entrance/: __main__.py  ws_handler.py
entrance/_util/: events.py  logger.py
entrance/connection/: __init__.py  base.py  cli.py  ssh.py  threaded.py
entrance/feature/: __init__.py  base.py  cfg_base.py  cfg_core.py  cfg_persist.py  dyn_base.py  tgt_base.py  tgt_group.py  tgt_syslog.py
npm/: README.md  index.js  package.json
python/: LICENSE  README.md  pyproject.toml  setup.py
python/entrance/: __init__.py  __main__.py  exceptions.py  main.py  server.py  settings.py  ws_handler.py
python/entrance/_util/: events.py  logger.py
python/entrance/connection/: __init__.py  base.py  cli.py  netconf.py  ssh.py  threaded.py
python/entrance/feature/: __init__.py  base.py  cfg_base.py  cfg_core.py  cfg_persist.py  dyn_base.py  tgt_base.py  tgt_cli_config.py  tgt_cli_exec.py  tgt_group.py  tgt_netconf.py  tgt_syslog.py
samples/: README.md
samples/0_simple_notes/elm/: build_prod  elm-package.json  package.json  webpack.config.js
samples/0_simple_notes/elm/src/: Main.elm  index.html  index.js
samples/0_simple_notes/svr/static/: !README  app.js  index.html
samples/1_notes/: README.md
samples/1_notes/elm/: build_prod  elm-analyse.json  elm-package.json  elm.json  package.json
samples/1_notes/elm/src/: Main.elm  State.elm  Types.elm  View.elm  index.html  index.js  main.js  style.scss
samples/1_notes/svr/: config.yml  make-venv  nix-run  run
samples/1_notes/svr/static/: !README  app.css  app.js  bootstrap.min.9d2d4110.css.map  index.html  main.1f19ae8e.js  style.97fcb138.css  style.97fcb138.css.map
samples/2_shell/: README.md
samples/2_shell/elm/: build_prod  package.json
samples/2_shell/elm/src/: InsecureShell.elm  State.elm  Types.elm  View.elm  index.html  style.scss
samples/2_shell/svr/: config.yml  make-venv  run.py
samples/2_shell/svr/static/: !README  bootstrap.min.9d2d4110.css  index.html  main.1f19ae8e.js  main.1f19ae8e.js.map  style.97fcb138.css  style.97fcb138.css.map
samples/3_browser/: README.md
samples/3_browser/elm/: build_prod  elm.json  package.json
samples/3_browser/elm/src/: Main.elm  ReadDir.elm  State.elm  (+3 more)
samples/3_browser/svr/: config.yml  nix-run  run.py
samples/3_router_simple/elm/: build_prod  elm-package.json  package.json
samples/3_router_simple/svr/: run  sample-prefs.json
samples/4_router_simple/: README.md
samples/4_router_simple/elm/: build_prod  elm.json  package.json
samples/4_router_simple/svr/: config.yml  make-single-binary  make-venv  nix-run  run  sample-prefs.json
src/EnTrance/: Channel.elm  Request.elm  Types.elm
src/EnTrance/Feature/: Gen.elm  Misc.elm  Persist.elm  Target.elm
(+94 files in other folders)
