[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "entrance"
version = "1.2.0"
author = "Ensoft Ltd"
description = "Server framerwork for web apps"
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.9"
dependencies = [
    "pyyaml",
    "uvicorn",
    "fastapi",
    "websockets",
    "ujson",
]

[project.extra-dependencies]
with-router-features = [
    "janus",
    "ncclient",
    "paramiko",
]

[project.urls]
Repository = "https://github.com/ensoft/entrance"
Issues = "https://github.com/ensoft/entrance/issues"

[tool.hatch.build]
include = ["entrance"]